Style: fixedButton z-index 추가

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -98,4 +98,5 @@ main {
   bottom: 50px;
   background-color: #000;
   color: #fff;
+  z-index: 10;
 }
